--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@ body {
   font-size: 20px;
   }
   
+h1 {
+  text-align: center;
+  Font size: 50px;
+  font-family: Arial;
+  font-style: bold;
+  }
+  
 #planets {
   margin-left: auto;
   margin-right: auto;
@@ -21,7 +28,7 @@ body {
   
 .planet_names {
   font-size: 36px;
-  font-family: impact;
+  font-family: Arial;
   color: ;
   }
   
