--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,8 @@ body {
   
 h1 {
   text-align: center;
-  font size: 64px;
+  font-size: 64px;
   font-family: Arial;
-  font-style: bold;
   }
   
 seq {
@@ -37,7 +36,6 @@ seq {
 .planet_names {
   font-size: 36px;
   font-family: Arial;
-  color: ;
   }
   
 .mercury {
